sigh still the table isnt working

--- a/distance_vector_routing/nbproject/project.properties
+++ b/distance_vector_routing/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=distance_vector_routing.Distance_vector_routing
+main.class=distance_vector_routing.Tables
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
